--- a/client-agent/package.json
+++ b/client-agent/package.json
@@ -33,6 +33,9 @@
     "url": "https://cybershieldx.be"
   },
   "license": "MIT",
+  "bin": {
+    "cybershieldx-agent": "./src/index.js"
+  },
   "pkg": {
     "targets": ["node16-win-x64", "node16-macos-x64", "node16-linux-x64", "node16-linux-arm64"],
     "outputPath": "dist-pkg"
